--- a/MoviesViewerOnSwift/Base.lproj/Main.storyboard
+++ b/MoviesViewerOnSwift/Base.lproj/Main.storyboard
@@ -2,43 +2,9 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="gQE-7C-1fU">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Movies Collection View Controller-->
-        <scene sceneID="DrD-6Z-PhV">
-            <objects>
-                <collectionViewController id="Ouw-lx-lDU" customClass="MoviesCollectionViewController" customModule="MoviesViewerOnSwift" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="yGu-rQ-v4a">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="1uQ-ag-seq">
-                            <size key="itemSize" width="83" height="81"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        </collectionViewFlowLayout>
-                        <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="9Ok-Ef-HKR">
-                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="83" height="81"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                </view>
-                            </collectionViewCell>
-                        </cells>
-                        <connections>
-                            <outlet property="dataSource" destination="Ouw-lx-lDU" id="bo5-wd-VRw"/>
-                            <outlet property="delegate" destination="Ouw-lx-lDU" id="SBL-Ym-tN2"/>
-                        </connections>
-                    </collectionView>
-                    <navigationItem key="navigationItem" id="dtf-CS-0ax"/>
-                </collectionViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Bbm-98-6V3" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1235" y="532"/>
-        </scene>
         <!--Navigation Controller-->
         <scene sceneID="Gok-QG-X0P">
             <objects>
@@ -50,12 +16,86 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="Ouw-lx-lDU" kind="relationship" relationship="rootViewController" id="EEP-IU-vjw"/>
+                        <segue destination="gXh-tP-6X1" kind="relationship" relationship="rootViewController" id="Mea-A8-XKU"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7kr-xB-i2Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="560" y="532"/>
+        </scene>
+        <!--Movies View Controller-->
+        <scene sceneID="CLC-J2-h7d">
+            <objects>
+                <viewController id="gXh-tP-6X1" customClass="MoviesViewController" customModule="MoviesViewerOnSwift" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="cqU-qA-rGK"/>
+                        <viewControllerLayoutGuide type="bottom" id="vYX-og-sOf"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Uyi-5u-GNC">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Zn6-bb-9HF">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MovieTableViewCell" rowHeight="70" id="FtX-c6-VcZ" customClass="MovieTableViewCell" customModule="MoviesViewerOnSwift">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="FtX-c6-VcZ" id="hEf-aO-jPP">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aIV-AV-NFn">
+                                                    <rect key="frame" x="8" y="5" width="60" height="60"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="60" id="pMQ-z9-BzA"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gfo-o5-CbE">
+                                                    <rect key="frame" x="76" y="24" width="42" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="42" id="afI-Cj-MSs"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Gfo-o5-CbE" firstAttribute="leading" secondItem="aIV-AV-NFn" secondAttribute="trailing" constant="8" id="01e-gF-fHa"/>
+                                                <constraint firstAttribute="centerY" secondItem="Gfo-o5-CbE" secondAttribute="centerY" id="6b1-z9-Y22"/>
+                                                <constraint firstItem="aIV-AV-NFn" firstAttribute="leading" secondItem="hEf-aO-jPP" secondAttribute="leadingMargin" id="86h-qX-IqY"/>
+                                                <constraint firstItem="aIV-AV-NFn" firstAttribute="top" secondItem="hEf-aO-jPP" secondAttribute="topMargin" constant="-3" id="FN1-hp-rjN"/>
+                                                <constraint firstAttribute="centerY" secondItem="aIV-AV-NFn" secondAttribute="centerY" constant="-0.5" id="TPE-eM-Cmu"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="movieThaumbnailImageView" destination="aIV-AV-NFn" id="aIt-Ig-CqT"/>
+                                            <outlet property="movieTitleLabel" destination="Gfo-o5-CbE" id="bpQ-mo-Y0h"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="gXh-tP-6X1" id="81N-6d-RVy"/>
+                                    <outlet property="delegate" destination="gXh-tP-6X1" id="fAr-oc-U1b"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="Zn6-bb-9HF" secondAttribute="trailing" constant="-16" id="Sjt-50-w30"/>
+                            <constraint firstItem="Zn6-bb-9HF" firstAttribute="leading" secondItem="Uyi-5u-GNC" secondAttribute="leadingMargin" constant="-16" id="Tob-za-JKQ"/>
+                            <constraint firstItem="Zn6-bb-9HF" firstAttribute="top" secondItem="cqU-qA-rGK" secondAttribute="bottom" constant="-64" id="XD1-dB-eoH"/>
+                            <constraint firstItem="vYX-og-sOf" firstAttribute="top" secondItem="Zn6-bb-9HF" secondAttribute="bottom" id="i6l-pf-hKa"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="5xJ-In-R2n"/>
+                    <connections>
+                        <outlet property="tableView" destination="Zn6-bb-9HF" id="nvM-M9-CIG"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="efR-uJ-mE1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1252" y="532"/>
         </scene>
     </scenes>
 </document>
